--- a/photoevent/assets/css/contact.css
+++ b/photoevent/assets/css/contact.css
@@ -1,6 +1,6 @@
 /*  Modal */
 .modal {
-  /*display: none; /* Hidden by default */
+  display: none; /* Hidden by default */
   position: fixed;
   z-index: 1000;
   left: 0;
