--- a/photoevent/assets/css/contact.css
+++ b/photoevent/assets/css/contact.css
@@ -21,7 +21,15 @@
   margin: 15% auto;
   border: 5px solid #000000;
   width: 80%;
-  animation: slide-down 1s ease;
+  animation: appear 350ms ease-in 1;
+}
+
+/* Add Animation */
+@keyframes appear {
+  0% {
+    opacity: 0;
+    transform: translateY(-10px);
+  }
 }
 
 .img-contact {
