--- a/photoevent/assets/css/single-photo.css
+++ b/photoevent/assets/css/single-photo.css
@@ -7,15 +7,12 @@
   width: 50%;
 }
 
-.galerie-hover-icon {
+.gallery-hover-icon {
   display: none;
 }
 .info {
   min-width: 420px;
   height: 321px;
-  /* margin-right: 3%; */
-  /* padding-bottom: 43px; */
-  /* border-bottom: 1px solid; */
   margin: 173px 0 18px 0;
 }
 
@@ -44,10 +41,11 @@
   display: flex;
   align-items: flex-end;
   border-bottom: 1px solid;
+  margin-right: 10px;
+  margin-bottom: 5px;
 }
 
 img {
-  /* max-width: 100%; */
   object-fit: cover;
   width: 100%;
   height: 844px;
@@ -55,129 +53,9 @@ img {
 
 .info-photo .photo-single:first-child {
   height: 69vw;
-
   min-height: 360px;
   position: relative;
   display: inline-block;
-}
-
-/* section "cette photo vous interesse?" */
-
-.more {
-  height: 118px;
-  margin: 0 10%;
-  border-bottom: 1px solid black;
-
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.more-tx-btn {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-}
-
-.more-tx {
-  font-family: "poppins";
-  font-weight: 300;
-  font-size: 14px;
-  padding-right: 1.75em;
-}
-
-.btn-CTA {
-  background-color: transparent;
-  border: transparent;
-  font-family: "space-mono";
-  font-size: 14px;
-  box-shadow: none;
-  padding: 0 15px;
-  cursor: pointer;
-  position: relative;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  transition: 0.5s all ease-in-out;
-}
-
-.btn-CTA::before {
-  content: "";
-  position: absolute;
-  background: black;
-  width: 3px;
-  height: 38px;
-  left: 0;
-  transition: 0.2s all;
-  z-index: -1;
-}
-
-.btn-CTA:hover::before {
-  width: 100%;
-}
-.btn-CTA:hover {
-  color: #ffffff;
-}
-
-/* afffichage des photos au hover des flèches */
-
-.more-slider {
-  display: flex;
-  flex-direction: column-reverse;
-}
-
-.photo-hover-container {
-  display: flex;
-}
-
-.prev-photo,
-.next-photo {
-  width: 108px;
-  height: 80px;
-}
-
-/* flèches */
-
-.more-fleches {
-  width: 135px;
-  margin-left: 38%;
-
-  display: flex;
-  align-items: flex-end;
-  justify-content: space-between;
-}
-
-.aimez-aussi-titre {
-  font-family: "space-mono";
-  font-weight: 400;
-  font-size: 18px;
-  letter-spacing: 0.1em;
-  padding-top: 77px;
-  padding-bottom: 35px;
-}
-
-.aimez-aussi-flex {
-  display: flex;
-}
-
-.aimez-aussi-btn-conatainer {
-  margin: 0 10%;
-
-  display: flex;
-  justify-content: center;
-}
-
-.aimez-aussi-btn {
-  margin-top: 5em;
-  margin-bottom: 5.6em;
-}
-
-@media all and (max-width: 680px) {
-  .more-slider {
-    display: none;
-  }
 }
 
 @media all and (max-width: 680px) {
@@ -196,89 +74,10 @@ img {
     display: flex;
     justify-content: center;
   }
-
-  .more {
-    border-top: 1px solid black;
-  }
-
-  .more-slider {
-    display: none;
-  }
-
-  .more,
-  .aimez-aussi-titre,
-  .background,
-  .aimez-aussi-btn-conatainer {
-    background-color: #e5e5e5;
-  }
-  .btn-CTA {
-    height: 38px;
-    background-color: white;
-    border: transparent;
-    font-family: "space-mono";
-    font-size: 14px;
-    box-shadow: none;
-    padding: 0 15px;
-    cursor: pointer;
-    position: relative;
-    z-index: 0;
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    transition: 0.5s all ease-in-out;
-  }
-
-  .btn-CTA::before {
-    content: "";
-    position: absolute;
-    background: black;
-    width: 3px;
-    height: 38px;
-    left: 0;
-    transition: 0.2s all;
-    z-index: -1;
-  }
-
-  .btn-CTA:hover {
-    color: #ffffff;
-  }
-
-  .btn-CTA:hover::before {
-    width: 100%;
-  }
 }
 
 @media all and (max-width: 480px) {
   .info {
     margin-right: 0;
-  }
-
-  .more {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-  }
-
-  .more-tx-btn {
-    flex-direction: column;
-  }
-
-  .more-fleches {
-    display: none;
-  }
-
-  .aimez-aussi-titre {
-    font-size: 0.9em;
-    padding: 0 30px;
-  }
-
-  .aimez-aussi {
-    align-items: center;
-  }
-
-  .aimez-aussi-btn {
-    margin: 30px 0;
   }
 }
