--- a/photoevent/assets/css/header.css
+++ b/photoevent/assets/css/header.css
@@ -1,9 +1,3 @@
-.navbar {
-  display: flex;
-  align-items: center;
-  list-style: none;
-}
-
 .header-container {
   height: 5em;
   display: flex;
@@ -22,6 +16,11 @@ header {
   object-fit: contain;
   width: 216px;
   height: 14px;
+}
+.navbar {
+  display: flex;
+  align-items: center;
+  list-style: none;
 }
 
 .menu-item {
@@ -47,10 +46,11 @@ header {
   cursor: pointer;
 }
 
-/* intégration du menu burger pr mobile */
+/* intégration du menu burger mobile */
 .menu-mobile {
   display: none;
 }
+
 .open_nav {
   display: none;
   list-style: none;
@@ -71,11 +71,7 @@ header {
   padding-top: 40px;
   z-index: 100;
 }
-.menu-item a {
-  color: #f0eaea;
-  font-weight: 400;
-  font-size: 44px;
-}
+
 .navbar-burger {
   display: flex;
   flex-direction: column;
@@ -88,48 +84,20 @@ header {
 }
 
 .menu-toggle {
-  display: block;
   position: absolute;
   right: 10%;
-  top: 60px;
+  top: 76px;
   padding: 0;
-  width: 45px;
-  height: 45px;
   border: none;
   background: transparent;
   cursor: pointer;
 }
 
-.main-navigation .line {
-  height: 2px;
-  background-color: #000;
-  display: block;
-  margin: auto;
-  margin-block: -2px;
-  width: 2.5em;
-  z-index: 9999;
-  position: relative;
-  transition: all 0.5s ease-in-out;
+.icons {
+  display: none;
 }
 
-.line_one {
-  transform: translateY(-12px);
-}
-.line_three {
-  transform: translateY(12px);
-}
-.open-nav .line_two {
-  width: 0;
-  background: transparent;
-}
-.open-nav .line_one {
-  transform: rotate(45deg);
-}
-.open-nav .line_three {
-  transform: rotate(-45deg);
-}
-
-/* animation à l'ouverture du menu burger */
+/* Animation à l'ouverture du menu burger */
 .open_nav.open {
   animation: slide-down 1s ease;
 }
@@ -144,27 +112,49 @@ header {
     transform: translateY(0);
   }
 }
-/* Animation à la fermeture du menu burger */
-.close_nav.closing {
-  transform: translateY(-100%) 1s;
-}
 
-@keyframes slide-up {
-  0% {
-    opacity: 1;
-    transform: translateY(0);
-  }
-  100% {
-    opacity: O;
-    transform: translateY(10px);
-  }
-}
+/* Resposive tablette et mobile*/
+
 @media screen and (max-width: 992px) {
   .menu-mobile {
     display: block;
   }
   .header-nav {
     display: none;
+  }
+  .navbar {
+    flex-direction: column;
+    line-height: 65px;
+  }
+  .navbar .menu-item {
+    padding: 0;
+    margin: 0;
+  }
+  .navbar .menu-item a {
+    font-size: 44px;
+    color: white;
+  }
+  .open_nav {
+    width: 100%;
+    top: 120px;
+  }
+  .navbar {
+    line-height: 100px;
+  }
+  .menu-menu-principal-container {
+    margin-top: 30%;
+  }
+  .icons {
+    display: block;
+  }
+  .icons::before {
+    content: "\2630";
+    font-size: 2.6em;
+    top: -22px;
+    position: relative;
+  }
+  .closing .icons::before {
+    content: "\2715";
   }
 }
 
@@ -180,9 +170,17 @@ header {
   .header-container {
     margin-left: 31px;
   }
+  .navbar {
+    margin-top: 50%;
+  }
   .open_nav {
     height: 100vh;
     width: 100%;
     top: 124px;
+  }
+  .icons::before {
+    font-size: 1.6em;
+    top: 0;
+    right: 40px;
   }
 }
