--- a/photoevent/assets/css/hero.css
+++ b/photoevent/assets/css/hero.css
@@ -24,13 +24,19 @@ section.hero {
   width: 100%;
   height: 962px;
 }
-
 @media screen and (max-width: 992px) {
   .title {
-    font-size: 2em;
+    font-size: 4em;
+  }
+}
+
+@media screen and (max-width: 668px) {
+  .title {
+    font-size: 1.5em;
   }
   .img-hero {
     height: 253px;
-    width: 379px;
+    width: 100%;
+    object-fit: cover;
   }
 }
