--- a/photoevent/assets/css/single-photo.css
+++ b/photoevent/assets/css/single-photo.css
@@ -3,21 +3,36 @@
   justify-content: space-evenly;
   margin: 40px 101px;
 }
-.gallery-photo {
+/*.gallery-photo {
   width: 50%;
-}
+}*/
 
 .gallery-hover-icon {
   display: none;
 }
 .info {
-  min-width: 420px;
+  width: 70%;
   height: 321px;
-  margin: 173px 0 18px 0;
+  /* margin: 177px 0 -65px 5px; */
+  /* margin-top: 173px; */
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+img.icon-oeil {
+  background: black;
+}
+/*.part {
+  flex: 1;
+}*/
+
+h2.photo-titre {
+  margin-bottom: 0px;
+  padding-bottom: 0;
 }
 
-.part {
-  flex: 1;
+.part li a {
+  text-transform: uppercase;
 }
 
 .info-tx {
@@ -26,6 +41,7 @@
 
 .photo-titre {
   font-family: "space-mono-italic";
+  font-style: italic;
   font-size: 4.1em;
   font-weight: 400;
   line-height: 58px;
@@ -45,9 +61,9 @@
   margin-bottom: 5px;
 }
 
-.img-hover {
+.photo-container .size-img img.img-hover {
   object-fit: cover;
-  width: 100%;
+  width: 563px;
   height: 844px;
 }
 
@@ -58,12 +74,61 @@
   display: inline-block;
 }
 
-@media all and (max-width: 680px) {
+.interested-photo {
+  margin-left: 8%;
+}
+
+.interested-photo-text-button {
+  display: flex;
+  align-items: center;
+}
+
+button.button.modal-js {
+  width: 272px;
+  height: 50px;
+  background: #d8d8d8;
+  display: flex;
+  justify-content: center;
+  border-radius: 2px;
+  padding: 8px 15px 8px 15px;
+  align-items: center;
+  margin-left: 20px;
+}
+
+@media screen and (max-width: 992px) {
+  .photo-container {
+    flex-direction: column;
+  }
   .photo-info {
+    order: 2;
+    width: 100%;
+  }
+  .photo-container .size-img img.img-hover {
+    width: 100%;
+    height: 60vh;
+  }
+  .gallery-photo {
+    width: 100%;
+  }
+  .info {
+    margin-top: 0;
+  }
+  .photo-titre {
+    font-size: 2.5em;
+    font-style: italic;
+    /* height: 46px;*/
+  }
+  .interested-photo-text-button {
+    flex-direction: column;
+  }
+}
+
+@media screen and (max-width: 680px) {
+  /* .photo-info {
     flex-wrap: wrap;
     flex-direction: column-reverse;
     align-items: flex-start;
-  }
+  }*/
 
   .info {
     margin-left: 3%;
@@ -76,8 +141,22 @@
   }
 }
 
-@media all and (max-width: 480px) {
+@media screen and (max-width: 390px) {
+  .photo-container .size-img img.img-hover {
+    height: 397px;
+  }
+  .photo-container {
+    margin: 43px 41px;
+  }
   .info {
-    margin-right: 0;
+    margin-left: 0;
+    padding-bottom: 26%;
+    width: 100%;
+  }
+  .photo-titre {
+    line-height: 46px;
+  }
+  h2.photo-titre {
+    /*padding-bottom: 49px;*/
   }
 }
