--- a/photoevent/assets/css/footer.css
+++ b/photoevent/assets/css/footer.css
@@ -1,7 +1,6 @@
 .footer_menu {
   list-style: none;
   padding: 12px 10%;
-  border-top: 1px solid;
   display: flex;
   justify-content: space-evenly;
 }
@@ -9,6 +8,8 @@
 .footer {
   width: 100%;
   height: 2.5em;
+  margin-top: 3%;
+  border-top: 1px solid;
 }
 
 #menu-item-19 {
