--- a/photoevent/assets/css/header.css
+++ b/photoevent/assets/css/header.css
@@ -1,5 +1,5 @@
 .header-container {
-  height: 5em;
+  height: 4.5em;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -181,6 +181,6 @@ header {
   .icons::before {
     font-size: 1.6em;
     top: 0;
-    right: 40px;
+    left: 4px;
   }
 }
