--- a/photoevent/assets/css/header.css
+++ b/photoevent/assets/css/header.css
@@ -27,7 +27,7 @@ header {
   font-family: "space-mono";
   font-size: 16px;
   font-weight: 400;
-  transition: transform 0.5s ease-in-out;
+  transition: transform 0.5s ease-in-out, font-weight 0.3s ease;
 }
 
 .navbar .menu-item {
@@ -35,7 +35,8 @@ header {
 }
 
 .menu-item:hover {
-  transform: scale(1.2);
+  font-weight: 700;
+  transform: scale(1.1);
 }
 
 #myBtn {
