--- a/photoevent/assets/css/hero.css
+++ b/photoevent/assets/css/hero.css
@@ -24,6 +24,13 @@ section.hero {
   width: 100%;
   height: 962px;
 }
+
+@media screen and (max-width: 1204px) {
+  .title {
+    font-size: 5em;
+  }
+}
+
 @media screen and (max-width: 992px) {
   .title {
     font-size: 4em;
